--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second git repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <h1>it was good</h1>
+   <h2>amezing short </h2>
+   <h3>nice to meet you</h3>
+   <p>kono jinis git a add korte hoile 3 ta jinis lagbe tar modde akta hosse git add second git comit -m"" and third git push</p> 
 </body>
 </html>
