--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <h2>amezing short </h2>
    <h3>nice to meet you</h3>
    <p>kono jinis git a add korte hoile 3 ta jinis lagbe tar modde akta hosse git add second git comit -m"" and third git push</p> 
+   <img src="emon.jpg" alt="">
 </body>
 </html>
